--- a/article_list.html
+++ b/article_list.html
@@ -207,7 +207,7 @@
     <div id="footer">
         <div class="line"></div>
         <div class="copy">
-            <p>版权所有 &copy;爱旅行</p>
+            <p>爱旅行 &copy;李浩民</p>
         </div>
     </div>
     <script type="text/javascript" src="./js/jquery.min.js"></script>
